--- a/index.html
+++ b/index.html
@@ -7,55 +7,50 @@
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-
+  <link rel="stylesheet" href="styles.css">
   <title>Interactive rating component</title>
 
-
-  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="flex justify-center items-center bg-black">
+<body>
 
-  <div id="new" class="  text-left  rounded-lg bg-slate-900 text-white mt-40  h-auto text-center w-96 pb-6 ">
-    <div class=" bg-slate-800 rounded-full  w-10 h-10 mt-5 ml-3 flex justify-center items-center">
-      <svg class="" width="17" height="16" xmlns="http://www.w3.org/2000/svg">
-        <path
-          d="m9.067.43 1.99 4.031c.112.228.33.386.58.422l4.45.647a.772.772 0 0 1 .427 1.316l-3.22 3.138a.773.773 0 0 0-.222.683l.76 4.431a.772.772 0 0 1-1.12.813l-3.98-2.092a.773.773 0 0 0-.718 0l-3.98 2.092a.772.772 0 0 1-1.119-.813l.76-4.431a.77.77 0 0 0-.222-.683L.233 6.846A.772.772 0 0 1 .661 5.53l4.449-.647a.772.772 0 0 0 .58-.422L7.68.43a.774.774 0 0 1 1.387 0Z"
-          fill="#FC7614" />
-      </svg>
-    </div>
+  <!-- Rating state start -->
 
-    <h2 class="text-left font-bold mt-10 ml-5">How did we do?</h2>
-
-
-
-    <p class=" ml-5 text-left text-sm text-gray-500 mt-0 ">Please let us know how we did with your support<br> request.
-      All feedback is appreciated
-      to help us<br> improve our offering!
-    </p>
-
-
-    <button
-     value="1" class="btn hover:bg-orange-600 active:bg-gray-300   text-gray-500  bg-slate-800 mt-20  w-10 rounded-full h-10 ">1</button>
-    <button
-     value="2"  class="btn hover:bg-orange-600 active:bg-gray-300  text-gray-500  bg-slate-800 ml-3 w-10  rounded-full h-10 ">2</button>
-    <button
-     value="3" class="btn hover:bg-orange-600 active:bg-gray-300  text-gray-500  bg-slate-800 ml-3 w-10  rounded-full h-10">3</button>
-    <button
-     value="4"  class="btn hover:bg-orange-600 active:bg-gray-300  text-gray-500  bg-slate-800 ml-3 w-10  rounded-full h-10">4</button>
-    <button
-      value="5" class="btn hover:bg-orange-600 active:bg-gray-300  text-gray-500  bg-slate-800 ml-3 w-10  rounded-full h-10">5</button>
-
-
-
-    <div>
-      <button id="sub" class="mt-14 w-56 bg-white h-10 rounded-full text-orange-600 border">Submit</button>
-    </div>
-
+  <div class="ratingcontainer">
+    <img src="./images/icon-star.svg" alt="header_star">
+    <h2>How did we do?</h2>
+    <p>Please let us know how we did with your support request. All feedback is appreciated
+      to help us improve our offering!</p>
+    <ul>
+      <li><button class="btn" type="button">1</button></li>
+      <li><button class="btn" type="button">2</button></li>
+      <li><button class="btn" type="button">3</button></li>
+      <li><button class="btn" type="button">4</button></li>
+      <li><button class="btn" type="button">5</button></li>
+    </ul>
+    <br>
+    <button class="btn-submit" type="submit" id="submit">Submit</button>
   </div>
 
+  <!-- Rating state end -->
 
-  <script src="index.js"></script>
+  <!-- Thank you state start -->
+
+  <div class="thankyoucontainer hidden">
+    <img src="/images/illustration-thank-you.svg" alt="thank you">
+    <p class="below-img"> You selected <!-- Add rating here --><span id="rating"></span> out of 5</p>
+
+    <h2>Thank you!</h2>
+
+    <p> We appreciate you taking the time to give a rating. If you ever need more support,
+      don’t hesitate to get in touch!</p>
+
+    <button class="btn-submit" type="submit">Submit</button>
+  </div>
+
+  <!-- Thank you state end -->
+
+  <script>src = "app.js"</script>
 </body>
 
 </html>
